[gd_scene load_steps=6 format=2]

[ext_resource path="res://models/hoop.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/Misc/BasketballHoop.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.10874, 0.77838, 0.113121 )

[sub_resource type="CylinderShape" id=2]
radius = 0.640766
height = 0.119052

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.672117, 0.431968, 0.468292 )

[node name="Hoop" type="StaticBody"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.02577, 0, 0, 0, 0.976668, 0, 0, 0, 0.974549, 0.0063715, -0.361544, -0.370658 )
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="Backboard" type="CollisionShape" parent="."]
transform = Transform( 1.99132, 0, 0, 0, 1.70277, 0, 0, 0, 1.70277, 0, 11.5141, 0.339111 )
shape = SubResource( 1 )

[node name="Ring" type="CollisionShape" parent="."]
transform = Transform( 1.70277, 0, 0, 0, 1.70277, 0, 0, 0, 1.70277, 0, 10.2847, 1.43982 )
shape = SubResource( 2 )

[node name="goal" type="Area" parent="."]
transform = Transform( 1.22058, 0, 0, 0, 1.22058, 0, 0, 0, 1.22058, 0, 11.0215, 1.04586 )

[node name="CollisionShape" type="CollisionShape" parent="goal"]
shape = SubResource( 3 )

[node name="Score_reset" type="Timer" parent="."]
one_shot = true

[node name="Ring_Point" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.9498, 1.40052 )
[connection signal="body_entered" from="goal" to="." method="_on_goal_body_entered"]
[connection signal="timeout" from="Score_reset" to="." method="_on_Score_reset_timeout"]
